<resources>
    <string name="app_name">おたすけじゅーる</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="main_tab1">スケジュール</string>
    <string name="main_tab2">やることリスト</string>
    <string name="main_tab3">タイマー</string>

    <string name="schedule">予定</string>
    <string name="todo">やること</string>

    <string name="init_time">00:00.000</string>

    <string name="most_priority">最優先</string>
    <string name="high_priority">高優先</string>
    <string name="middle_priority">中優先</string>
    <string name="low_priority">低優先</string>

    <string name="format_month_year">2017/09/29</string>

    <string name="line">This is line.</string>

    <string name="today_only">今日だけ</string>
    <string name="every_day">毎日</string>
    <string name="every_week">毎週</string>
    <string name="every_month">毎月</string>
    <string name="every_year">毎年</string>

    <string name="delete_massage">削除します。\nよろしいですか？</string>
    <string name="complicated_massage">完了しましたか？</string>

    <string name="yes">はい</string>
    <string name="no">いいえ</string>

    <string name="change_message">友達から変更リクエストが届いてます。\n変更を受け入れますか\n優先度が変更される可能性があります。</string>

    <string name="task_info_key">taskInfoList</string>
    <string name="schedule_info_key">scheduleInfoList</string>
    <string name="every_info_key">everyInfoList</string>
    <string name="start">開始</string>
    <string name="change">変更</string>
    <string name="complete">完了</string>
    <string name="delete">削除</string>
    <string name="add_sub">細かい目標の追加</string>
    <string name="progress">進み具合</string>
    <string name="no_title">無題</string>
    <string name="schedule_title">予定名</string>
    <string name="schedule_body">予定名はなんですか？</string>
    <string name="next">次へ</string>
    <string name="add">追加</string>
    <string name="sub_task_title">細かい目標名</string>
    <string name="sub_task_body">細かい目標名はなんですか</string>
    <string name="sub_task_hint">細かい目標名</string>
    <string name="task_title">やること名</string>
    <string name="task_body">やること名は何ですか？</string>
    <string name="task_hint">やること名</string>
    <string name="sub_task_time_title">細かい目標の時間</string>
    <string name="sub_task_time_body">細かい目標をいつに入れますか？</string>
    <string name="task_time_title">やることの期限</string>
    <string name="task_time_body">期限はいつまでですか？</string>
    <string name="task_card_due_date_default_text">0</string>
    <string name="task_card_task_name_default_name">無題</string>
    <string name="minute">分</string>
    <string name="hour">時</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="schedule_finish_time_title">予定終了時間</string>
    <string name="schedule_finish_time_body">予定はいつまでですか？</string>
    <string name="schedule_set_notification_time_title">予定開始・終了前の通知</string>
    <string name="schedule_set_notification_time_body">予定開始・終了何分前に通知しますか？</string>
    <string name="schedule_set_repeat_title">予定の繰り返し</string>
    <string name="schedule_set_repeat_body">この予定を繰り返しスケジュールに入れますか？</string>
    <string name="once_only">今回だけ</string>
    <string name="task_priority">タスクの優先度</string>
    <string name="task_should_body">やった方が良い(should)タスクですか？</string>
    <string name="task_finish_time_title">タスク終了の目安時間</string>
    <string name="task_finish_time_body">タスクが終了する目安は何時間ですか？</string>
    <string name="time">時間</string>
    <string name="task_set_repeat_title">タスクの繰り返し</string>
    <string name="task_set_repeat_body">このタスクを繰り返しスケジュールに入れますか？</string>
    <string name="task_want_body">やりたい(want to)タスクですか？</string>
    <string name="schedule_set_start_time_title">予定開始時間</string>
    <string name="schedule_set_start_time_body">予定はいつからですか？</string>
    <string name="task_card_view_due">残り</string>
    <string name="now">現在</string>
    <string name="ok">OK</string>
    <string name="yes_en">YES</string>
    <string name="cancel_en">Cancel</string>
    <string name="no_en">NO</string>
    <string name="add_sub_body">細かい目標を追加しますか？</string>
    <string name="stop_pause">一時停止</string>
    <string name="title_timer">タイマー</string>
    <string name="question_timer">タイマーを何分間セットしますか？</string>
    <string name="support_edit_timer">分間</string>
    <string name="hint_set_time_timer">10</string>
    <string name="confirmation">確認</string>
    <string name="focus_and_break_time">集中時間と休憩時間</string>
    <string name="focus_time">集中する時間</string>
    <string name="minutue">分間</string>
    <string name="title_break_time">休憩する時間</string>
    <string name="notification_before_end">終了前の通知</string>
    <string name="notification_before_end_body">終了何分前に通知しますか？</string>
    <string name="before_minutes">分前</string>
</resources>
