<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?android:actionBarSize">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrow_back_white_48dp"
                android:contentDescription="backButton"/>
        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/explanationRelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_back">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/task_set_repeat_title"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/task_set_repeat_body"
                android:textSize="25sp"/>
        </RelativeLayout>


        <RadioGroup
            android:id="@+id/task_repeat_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/explanationRelative"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="40dp">

            <RadioButton
                android:id="@+id/radio_task1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:checked="true"
                android:text="@string/today_only"
                android:textSize="25sp"/>

            <RadioButton
                android:id="@+id/radio_task2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/every_day"
                android:textSize="25sp"/>

            <RadioButton
                android:id="@+id/radio_task3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/every_week"
                android:textSize="25sp"/>

            <RadioButton
                android:id="@+id/radio_task4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/every_month"
                android:textSize="25sp"/>

            <RadioButton
                android:id="@+id/radio_task5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/every_year"
                android:textSize="25sp"/>
        </RadioGroup>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <Button
                android:id="@+id/button_next"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:background="#FBFBF0"
                android:text="@string/next"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>

        </RelativeLayout>

    </RelativeLayout>
</layout>
