<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="nextOnClick"
            type="android.view.View.OnClickListener"/>

        <variable
            name="backOnClick"
            type="android.view.View.OnClickListener"/>

    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?android:actionBarSize">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrow_back_white_48dp"
                android:contentDescription="backButton"
                android:onClick="@{backOnClick}"/>

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/schedule_set_repeat_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/schedule_set_repeat_body"
                    android:textSize="25sp"/>

            </RelativeLayout>

            <RadioGroup
                android:id="@+id/plan_repeat_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <RadioButton
                    android:id="@+id/radio_plan1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:checked="true"
                    android:text="@string/once_only"
                    android:textSize="25sp"/>

                <RadioButton
                    android:id="@+id/radio_plan2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/every_day"
                    android:textSize="25sp"/>

                <RadioButton
                    android:id="@+id/radio_plan3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/every_week"
                    android:textSize="25sp"/>

                <RadioButton
                    android:id="@+id/radio_plan4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/every_month"
                    android:textSize="25sp"/>

                <RadioButton
                    android:id="@+id/radio_plan5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/every_year"
                    android:textSize="25sp"/>
            </RadioGroup>


            <Button
                android:id="@+id/button_next"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="#FBFBF0"
                android:onClick="@{nextOnClick}"
                android:text="@string/next"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>

        </RelativeLayout>


    </LinearLayout>
</layout>
