<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="nextOnClick"
            type="android.view.View.OnClickListener"/>

        <variable
            name="backOnClick"
            type="android.view.View.OnClickListener"/>

    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/colorPrimary"
            android:minHeight="?android:actionBarSize"
            android:padding="0dp">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrow_back_white_48dp"
                android:contentDescription="backButton"
                android:onClick="@{backOnClick}"
                tools:ignore="ContentDescription"/>
        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/schedule_finish_time_title"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/schedule_finish_time_body"
                android:textSize="25sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/month_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <NumberPicker
                            android:id="@+id/finish_month_num_pick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:text="@string/month"
                            android:textSize="25sp"/>

                        <NumberPicker
                            android:id="@+id/finish_day_num_pick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:text="@string/day"
                            android:textSize="25sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <NumberPicker
                            android:id="@+id/finish_hour_num_pick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:text="@string/hour"
                            android:textSize="25sp"/>

                        <NumberPicker
                            android:id="@+id/finish_minute_num_pick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:text="@string/minute"
                            android:textSize="25sp"/>
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/button_next"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:background="#FBFBF0"
                    android:text="@string/next"
                    android:onClick="@{nextOnClick}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"/>

            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>
